update the citation information

--- a/vignettes/library.bib
+++ b/vignettes/library.bib
@@ -5,10 +5,10 @@
         Ostareck-Lederer, Antje and Dieterich, Christoph and
         Hüttelmaier, Stefan and Niehrs, Christof and Dominissini, Dan and
         König, Julian* and Zarnack, Kathi*},
-    journal = {bioRxiv},
+    journal = {Nucleic Acids Research},
     title = {{Deep and accurate detection of m6A RNA modifications using
         miCLIP2 and m6Aboost machine learning}},
-    url = {https://doi.org/10.1101/2020.12.20.423675},
+    url = {https://doi.org/10.1093/nar/gkab485},
     year = 2021
 }
 
